[Jiachen]-feat: footer display

--- a/index.html
+++ b/index.html
@@ -15,31 +15,44 @@
   <div class="header">
     <div class="logo"></div>
     <div class="topbanner-row1">
-        <a href="#Missons" class="link-topbanner-row1">Missons</a>
-        <a href="#Galleries" class="link-topbanner-row1">Galleries</a>
-        <a href="#NASA TV" class="link-topbanner-row1">NASA TV</a>
-        <a href="#Follow NASA" class="link-topbanner-row1">Follow NASA</a>
-        <a href="#Downloads" class="link-topbanner-row1">Downloads</a>
-        <a href="#About" class="link-topbanner-row1">About</a>
-        <a href="#NASA Audiences" class="link-topbanner-row1">NASA Audiences</a>
+      <a href="#Missons" class="link-topbanner-row1">Missons</a>
+      <a href="#Galleries" class="link-topbanner-row1">Galleries</a>
+      <a href="#NASA TV" class="link-topbanner-row1">NASA TV</a>
+      <a href="#Follow NASA" class="link-topbanner-row1">Follow NASA</a>
+      <a href="#Downloads" class="link-topbanner-row1">Downloads</a>
+      <a href="#About" class="link-topbanner-row1">About</a>
+      <a href="#NASA Audiences" class="link-topbanner-row1">NASA Audiences</a>
     </div>
     <div class="topbanner-row2">
-        <a href="#Humans in Space" class="link-topbanner-row2">Humans in Space</a>
-        <a href="#Moon to Mars" class="link-topbanner-row2">Moon to Mars</a>
-        <a href="#Earth" class="link-topbanner-row2">Earth</a>
-        <a href="#v" class="link-topbanner-row2">Space Tech</a>
-        <a href="#Flight" class="link-topbanner-row2">Flight</a>
-        <a href="#Solar System and Beyond" class="link-topbanner-row2">Solar System and Beyond</a>
-        <a href="#Education" class="link-topbanner-row2">Education</a>
-        <a href="#History" class="link-topbanner-row2">History</a>
-        <a href="#Benifits to You" class="link-topbanner-row2">Benifits to You</a>  
+      <a href="#Humans in Space" class="link-topbanner-row2">Humans in Space</a>
+      <a href="#Moon to Mars" class="link-topbanner-row2">Moon to Mars</a>
+      <a href="#Earth" class="link-topbanner-row2">Earth</a>
+      <a href="#v" class="link-topbanner-row2">Space Tech</a>
+      <a href="#Flight" class="link-topbanner-row2">Flight</a>
+      <a href="#Solar System and Beyond" class="link-topbanner-row2">Solar System and Beyond</a>
+      <a href="#Education" class="link-topbanner-row2">Education</a>
+      <a href="#History" class="link-topbanner-row2">History</a>
+      <a href="#Benifits to You" class="link-topbanner-row2">Benifits to You</a>
     </div>
     <form action="GET">
       <input type="text" placeholder="Search">
     </form>
   </div>
   <div class="main"></div>
-  <div class="footer"></div>
+  <div class="footer">
+    <div class="logo"></div>
+    <p>National Aeronautics and Space Administration</p>
+    <p>NASA Official:Brain Dunbar</p>
+    <div class="footerbanner">
+        <a href="#No Fear Act">No Fear Act</a>
+        <a href="#FOIA">FOIA</a>
+        <a href="#Privacy">Privacy</a>
+        <a href="#Office of Inspector General">Office of Inspector General</a>
+        <a href="#Office of Special Counsel">Office of Special Counsel</a>
+        <a href="#Agency Financial Reports">Agency Financial Reports</a>
+        <a href="#Contact NASA">Contact NASA</a>
+    </div>
+  </div>
 
 </body>
 
