[Jiachen]-feat: add pictures for main page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,48 @@
       <input type="text" placeholder="Search">
     </form>
   </div>
-  <div class="main"></div>
+  <div class="main">
+    <div class="contentbox">
+      <a href="#">Dawn</a>
+      <a href="#">Dusk for Dawn: Mission of Many Firsts to Gathrt More Data in Home Stretch</a>
+    </div>
+    <div class="contentbox">
+      <a href="#">Climate</a>
+      <a href="#">A Scientist's Final Paper Look Towards Earth's Future Climate</a>
+    </div>
+    <div class="contentbox"></div>
+    <div class="contentbox">
+      <a href="#">July 16, 1969: Liftoff of Apollo 11</a>
+    </div>
+    <div class="contentbox">
+      <a href="#">Image of the Day</a>
+      <a href="#">A Merger of Stars</a>
+    </div>
+    <div class="contentbox">
+      <a href="#">Asteroids</a>
+      <a href="#">Observatories Team Up to Reveal Rare Double Asteroids</a>
+    </div>
+    <div class="contentbox"></div>
+    <div class="contentbox">
+      <a href="#">About NASA</a>
+      <a href="#">NASA Statement on Nomination for Agency Deputy Administrator</a>
+    </div>
+    <div class="contentbox">
+      <a href="#">Juno</a>
+      <a href="#">NASA Juno Data Indicate Another Possible Volcano on Jupiter Moon Io</a>
+    </div>
+    <div class="contentbox">
+      <a href="#">Cassini</a>
+      <a href="#">NASA's Cassini Coverage Lands An Emmy Nomination</a>
+    </div>
+    <div class="contentbox">
+      <a href="#">Fermi Space Telescope</a>
+      <a href="#">NASA's Fermi Traces Source of Cosmic Neutrino to Monster Black Hole</a>
+    </div>
+    <div class="more-stories">
+      <a href="#">MORE STORIES</a>
+    </div>
+  </div>
   <div class="footer">
     <div class="logo"></div>
     <p>National Aeronautics and Space Administration</p>
