[Jiachen]-feat: whole page displays as we expected

--- a/index.html
+++ b/index.html
@@ -6,33 +6,38 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>NASA</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="iconfont.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="./styles/header.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./styles/main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./styles/footer.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./styles/iconfont.css">
 </head>
 
 <body>
 
   <div class="header">
+    <audio src="./music/smile.mp3" autoplay loop>
+      <p>If you are reading this, it is because your browser does not support the audio element.</p>
+    </audio>
     <div class="logo"></div>
     <div class="topbanner-row1">
-      <a href="#Missons" class="link-topbanner-row1">Missons</a>
-      <a href="#Galleries" class="link-topbanner-row1">Galleries</a>
-      <a href="#NASA TV" class="link-topbanner-row1">NASA TV</a>
-      <a href="#Follow NASA" class="link-topbanner-row1">Follow NASA</a>
-      <a href="#Downloads" class="link-topbanner-row1">Downloads</a>
-      <a href="#About" class="link-topbanner-row1">About</a>
-      <a href="#NASA Audiences" class="link-topbanner-row1">NASA Audiences</a>
+      <a href="#" class="link-topbanner-row1">Missons</a>
+      <a href="#" class="link-topbanner-row1">Galleries</a>
+      <a href="#" class="link-topbanner-row1">NASA TV</a>
+      <a href="#" class="link-topbanner-row1">Follow NASA</a>
+      <a href="#" class="link-topbanner-row1">Downloads</a>
+      <a href="#" class="link-topbanner-row1">About</a>
+      <a href="#" class="link-topbanner-row1">NASA Audiences</a>
     </div>
     <div class="topbanner-row2">
-      <a href="#Humans in Space" class="link-topbanner-row2">Humans in Space</a>
-      <a href="#Moon to Mars" class="link-topbanner-row2">Moon to Mars</a>
-      <a href="#Earth" class="link-topbanner-row2">Earth</a>
-      <a href="#v" class="link-topbanner-row2">Space Tech</a>
-      <a href="#Flight" class="link-topbanner-row2">Flight</a>
-      <a href="#Solar System and Beyond" class="link-topbanner-row2">Solar System and Beyond</a>
-      <a href="#Education" class="link-topbanner-row2">Education</a>
-      <a href="#History" class="link-topbanner-row2">History</a>
-      <a href="#Benifits to You" class="link-topbanner-row2">Benifits to You</a>
+      <a href="#" class="link-topbanner-row2">Humans in Space</a>
+      <a href="#" class="link-topbanner-row2">Moon to Mars</a>
+      <a href="#" class="link-topbanner-row2">Earth</a>
+      <a href="#" class="link-topbanner-row2">Space Tech</a>
+      <a href="#" class="link-topbanner-row2">Flight</a>
+      <a href="#" class="link-topbanner-row2">Solar System and Beyond</a>
+      <a href="#" class="link-topbanner-row2">Education</a>
+      <a href="#" class="link-topbanner-row2">History</a>
+      <a href="#" class="link-topbanner-row2">Benifits to You</a>
     </div>
     <form action="GET">
       <input type="text" placeholder="Search">
@@ -40,40 +45,54 @@
   </div>
   <div class="main">
     <div class="contentbox">
-      <a href="#">Dawn</a>
+      <a href="#" class="link-blue">Dawn</a>
       <a href="#">Dusk for Dawn: Mission of Many Firsts to Gathrt More Data in Home Stretch</a>
     </div>
     <div class="contentbox">
-      <a href="#">Climate</a>
+      <a href="#" class="link-blue">Climate</a>
       <a href="#">A Scientist's Final Paper Look Towards Earth's Future Climate</a>
     </div>
-    <div class="contentbox"></div>
+    <div class="contentbox">
+      <h3>NASA Events</h3>
+      <p>Calling All Social Media Users! Apply to Experience the Launch of NASA's ICESat-2</p>
+      <p>No Earlier Than Saturday, Aug.4, 4 a.m. EDT: Launch of Parker Solar Probe from Cape Canaveral Air Force Station
+        in Florida</p>
+      <div class="events-links">
+        <a href="#">NASA TV Schedule</a>
+        <a href="#">Launches and Landings</a>
+      </div>
+
+    </div>
     <div class="contentbox">
       <a href="#">July 16, 1969: Liftoff of Apollo 11</a>
     </div>
     <div class="contentbox">
-      <a href="#">Image of the Day</a>
+      <a href="#" class="link-blue">Image of the Day</a>
       <a href="#">A Merger of Stars</a>
     </div>
     <div class="contentbox">
-      <a href="#">Asteroids</a>
+      <a href="#" class="link-blue">Asteroids</a>
       <a href="#">Observatories Team Up to Reveal Rare Double Asteroids</a>
     </div>
-    <div class="contentbox"></div>
     <div class="contentbox">
-      <a href="#">About NASA</a>
+      <div class="NASA-video">
+        <video src="./videos/caixukun.mp4" controls autoplay muted loop></video>
+      </div>
+    </div>
+    <div class="contentbox">
+      <a href="#" class="link-blue">About NASA</a>
       <a href="#">NASA Statement on Nomination for Agency Deputy Administrator</a>
     </div>
     <div class="contentbox">
-      <a href="#">Juno</a>
+      <a href="#" class="link-blue">Juno</a>
       <a href="#">NASA Juno Data Indicate Another Possible Volcano on Jupiter Moon Io</a>
     </div>
     <div class="contentbox">
-      <a href="#">Cassini</a>
+      <a href="#" class="link-blue">Cassini</a>
       <a href="#">NASA's Cassini Coverage Lands An Emmy Nomination</a>
     </div>
     <div class="contentbox">
-      <a href="#">Fermi Space Telescope</a>
+      <a href="#" class="link-blue">Fermi Space Telescope</a>
       <a href="#">NASA's Fermi Traces Source of Cosmic Neutrino to Monster Black Hole</a>
     </div>
     <div class="more-stories">
@@ -85,16 +104,15 @@
     <p>National Aeronautics and Space Administration</p>
     <p>NASA Official:Brain Dunbar</p>
     <div class="footerbanner">
-        <a href="#No Fear Act">No Fear Act</a>
-        <a href="#FOIA">FOIA</a>
-        <a href="#Privacy">Privacy</a>
-        <a href="#Office of Inspector General">Office of Inspector General</a>
-        <a href="#Office of Special Counsel">Office of Special Counsel</a>
-        <a href="#Agency Financial Reports">Agency Financial Reports</a>
-        <a href="#Contact NASA">Contact NASA</a>
+      <a href="#">No Fear Act</a>
+      <a href="#">FOIA</a>
+      <a href="#">Privacy</a>
+      <a href="#">Office of Inspector General</a>
+      <a href="#">Office of Special Counsel</a>
+      <a href="#">Agency Financial Reports</a>
+      <a href="#">Contact NASA</a>
     </div>
   </div>
-
 </body>
 
 </html>
