[Jiachen]-refactor: rename the class, add default font and reposition the top banner

--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
       <p>If you are reading this, it is because your browser does not support the audio element.</p>
     </audio>
     <div class="logo"></div>
-    <div class="topbanner-row1">
-      <a href="#" class="link-topbanner-row1">Missons</a>
-      <a href="#" class="link-topbanner-row1">Galleries</a>
-      <a href="#" class="link-topbanner-row1">NASA TV</a>
-      <a href="#" class="link-topbanner-row1">Follow NASA</a>
-      <a href="#" class="link-topbanner-row1">Downloads</a>
-      <a href="#" class="link-topbanner-row1">About</a>
-      <a href="#" class="link-topbanner-row1">NASA Audiences</a>
+    <div class="topbanner-nasa">
+      <a href="#" class="link-topbanner-nasa">Missons</a>
+      <a href="#" class="link-topbanner-nasa">Galleries</a>
+      <a href="#" class="link-topbanner-nasa">NASA TV</a>
+      <a href="#" class="link-topbanner-nasa">Follow NASA</a>
+      <a href="#" class="link-topbanner-nasa">Downloads</a>
+      <a href="#" class="link-topbanner-nasa">About</a>
+      <a href="#" class="link-topbanner-nasa">NASA Audiences</a>
     </div>
-    <div class="topbanner-row2">
-      <a href="#" class="link-topbanner-row2">Humans in Space</a>
-      <a href="#" class="link-topbanner-row2">Moon to Mars</a>
-      <a href="#" class="link-topbanner-row2">Earth</a>
-      <a href="#" class="link-topbanner-row2">Space Tech</a>
-      <a href="#" class="link-topbanner-row2">Flight</a>
-      <a href="#" class="link-topbanner-row2">Solar System and Beyond</a>
-      <a href="#" class="link-topbanner-row2">Education</a>
-      <a href="#" class="link-topbanner-row2">History</a>
-      <a href="#" class="link-topbanner-row2">Benifits to You</a>
+    <div class="topbanner-interaction">
+      <a href="#" class="link-topbanner-interaction">Humans in Space</a>
+      <a href="#" class="link-topbanner-interaction">Moon to Mars</a>
+      <a href="#" class="link-topbanner-interaction">Earth</a>
+      <a href="#" class="link-topbanner-interaction">Space Tech</a>
+      <a href="#" class="link-topbanner-interaction">Flight</a>
+      <a href="#" class="link-topbanner-interaction">Solar System and Beyond</a>
+      <a href="#" class="link-topbanner-interaction">Education</a>
+      <a href="#" class="link-topbanner-interaction">History</a>
+      <a href="#" class="link-topbanner-interaction">Benifits to You</a>
     </div>
     <form action="GET">
       <input type="text" placeholder="Search">
